2001-11-13  Seth Robertson  <seth@yeah.baka.org>

	* test/test_ioh.c: Add test program
	* lib/b_ioh.c: Add stdio functions

2001-11-12  Seth Robertson  <seth@yeah.baka.org>

	* src/proto.c: Doxygenate

	* lib/b_ioh.c: IOH is now code-complete

2001-11-12  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_getbyfoo.c (copy_hostent): Fencepost error in copying host
	address list.
	(bk_gethostbyfoo): Do not do FQDN searches be default. Allow them
	based on flag.
	(bk_gethostbyfoo): Save addresses in the correct way.

2001-11-08  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_netinfo.c: New file dealing with various aspects of
	network information. All utility functions (perhaps should be
	broken out into two files).

	* lib/b_getbyfoo.c: Port to new BK_MALLOC(CALLOC) semantics.

	* lib/b_string.c (bk_strlen): Acts like strlen, but bounded.

2001-11-07  James Tanis  <jtt@winwood.sysdetect.com>

	* b_run.c: Add function to turn off run. If the run is over make
	sure that select(2) doesn't block.

	* Added bk_gethostbyfoo and support.

2001-11-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_general.c: Convert BK_MALLOC to new semantic
	* lib/b_run.c: Convert BK_MALLOC to new semantic
	(bk_run_once): Convert to BK_TV_CMP instead of using float comparison

	* lib/b_config.c: Convert BK_MALLOC to new semantic

2001-11-06  James Tanis  <jtt@winwood.sysdetect.com>

	* test/test_getbyfoo.c (progrun): test program for getbyfoo
	functions. 

	* lib/b_getbyfoo.c (bk_getprotobyfoo): Get protoent by
	anything (not yet mutex'ed).
	(bk_protoent_destroy): Destroy a protoent created by above.
	(bk_getprotobyfoo): Get a servent by anything.
	(bk_protoent_destroy): Destroy the servent created above.

	* lib/b_config.c (bk_config_init): All user to pass in preferences.
	(bk_config_print): print config file.
	(load_config_from_file): Support for included files.
	(check_for_double_include): Recursive function to eliminate double
	inclusion.
